new_Test/deploy_jenkins_custom_k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-test
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-test
  namespace: jenkins-test
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30898
  selector:
    app: jenkins-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-test
  namespace: jenkins-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-test
  template:
    metadata:
      labels:
        app: jenkins-test
    spec:
      containers:
      - name: jenkins-test
        image: aramirol/jenkins-test:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: jenkins-docker
          mountPath: "/var/run/docker.sock"
        - name: jenkins-docker-bin
          mountPath: "/usr/bin/docker"
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-test-pvc
      - name: jenkins-docker
        hostPath:
          path: /var/run/docker.sock
      - name: jenkins-docker-bin
        hostPath:
          path: /usr/bin/docker
---
